Fixed so allowed origin can be set in env variable. Tried to update swagger responses for orders but it still doesnt work properly.
